--- a/front/src/components/Card.css
+++ b/front/src/components/Card.css
@@ -1,19 +1,19 @@
-/*.Card {
-    margin: 10px;
-    padding: 15px;
-    box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.6);
-    display: block;
-    background-color: white;
-}*/
 
-.Card h2 {
+.Card h3 {
     margin: auto;
     text-align: center;
 }
+
+.Card h7 {
+    margin: auto;
+    text-align: match-parent;
+}
+
 .Card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
-    background-color: white;
+    background: white;
     margin: 20px;
+    text-align: center;
 }
