--- a/front/src/index.css
+++ b/front/src/index.css
@@ -84,3 +84,19 @@ body, html, .App, #root, .outer {
 .forgot-password a {
   color: #167bff;
 }
+
+
+.Card p {
+    margin: auto;
+    text-align: match-parent;
+}
+
+.Card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    background: white;
+    margin: 20px;
+    text-align: left;
+    padding: 10px
+}
