--- a/front/src/index.css
+++ b/front/src/index.css
@@ -39,8 +39,8 @@ body, html, .App, #root, .outer {
     height: 100%;
     width: 80%;
     margin: auto;
-    //background: #F9F7F9;
-    //box-shadow: 10px 14px 80px rgba(34, 35, 58, 0.2);
+    background: #F9F7F9;
+    box-shadow: 10px 14px 80px rgba(34, 35, 58, 0.2);
     padding: 40px 55px 45px 55px;
 }
 
