--- a/front/src/index.css
+++ b/front/src/index.css
@@ -39,6 +39,7 @@ body, html, .App, #root, .outer {
     height: 100%;
     width: 80%;
     margin: auto;
+    overflow: auto;
     background: #F9F7F9;
     box-shadow: 10px 14px 80px rgba(34, 35, 58, 0.2);
     padding: 40px 55px 45px 55px;
@@ -54,6 +55,10 @@ body, html, .App, #root, .outer {
 
 .footer {
     box-shadow: 0 -5px 3px rgba(34, 35, 58, 0.2);
+    position:absolute;
+    bottom:0;
+    display:block;
+    width:100%
 }
 
 .outer .form-control:focus {
