--- a/front/src/index.css
+++ b/front/src/index.css
@@ -54,6 +54,7 @@ body, html, .App, #root, .outer {
 
 .footer {
     box-shadow: 0 -5px 3px rgba(34, 35, 58, 0.2);
+    position: sticky;
 }
 
 .outer .form-control:focus {
