--- a/front/src/index.css
+++ b/front/src/index.css
@@ -41,8 +41,9 @@ body, html, .App, #root {
 }
 
 .innerForm {
+    min-width: 450px;
     width: 50%;
-    margin: auto;
+    margin: auto auto 15px;
     background: #ffffff;
     padding: 40px 55px 45px 55px;
     box-shadow: 0 14px 80px rgba(34, 35, 58, 0.2);
