--- a/front/src/index.css
+++ b/front/src/index.css
@@ -40,14 +40,17 @@ body, html, .App, #root {
     transition: all .3s;
 }
 
+.outerForm {
+
+}
 
 .innerForm {
-    min-width: 450px;
-    width: 50%;
-    margin: auto auto 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
     background: #ffffff;
-    padding: 40px 55px 45px 55px;
-    box-shadow: 0 14px 80px rgba(34, 35, 58, 0.2);
+    padding: 30px 45px 35px 45px;
     border-radius: 15px;
 }
 
