--- a/front/src/index.css
+++ b/front/src/index.css
@@ -12,6 +12,9 @@ body {
     background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+.dropdown-toggle:after {
+    visibility: hidden
+}
 
 body, html, .App, #root {
     width: 100%;
