--- a/front/src/oglasi/arhivirani/arhiviraniOglasi.css
+++ b/front/src/oglasi/arhivirani/arhiviraniOglasi.css
@@ -1,17 +1,17 @@
-.dropdown-menu.show {
+.readonly > .dropdown-menu.show {
     display: block;
     width: 100%;
 }
 
 
-.dropdown-toggle {
+.readonly > .dropdown-toggle {
+    flex-direction: row;
     align-items: flex-start;
-    background-color: #e9ecef;
+    background: #e9ecef;
     border: 1px solid #ced4da;
     width: 100%;
     display: grid
 }
-
 
 .card {
     padding: 20px;
