--- a/front/src/index.css
+++ b/front/src/index.css
@@ -130,6 +130,20 @@ body, html, .App, #root {
     padding: 40px 55px 45px 55px;
 }
 
+.middleHomepage {
+    min-height: 100%;
+    box-sizing: content-box;
+    flex: 1;
+    width: 80%;
+    overflow: hidden;
+    background: #F9F7F9;
+    box-shadow: 10px 14px 80px rgba(34, 35, 58, 0.2);
+    padding: 40px 55px 45px 55px;
+    margin: auto;
+    border-radius: 15px;
+    transition: all .3s;
+}
+
 .navbar {
     background: #F9F7F9;
 }
@@ -179,13 +193,21 @@ body, html, .App, #root {
 }
 
 .Card {
+    display: inline-block;
+    width: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
     background: white;
     margin: 20px;
-    text-align: left;
-    padding: 10px
+    text-align: center;
+    padding: 10px;
+    color: black;
+}
+
+.Card a {
+    color: #167bff;
+    font-weight: bold;
 }
 
 .formLabel {
@@ -193,5 +215,10 @@ body, html, .App, #root {
 }
 
 .formLabel {
+    font-weight: bold;
+}
+
+.izbornikHomepage {
+    color: #7f7d7d;
     font-weight: bold;
 }
