bugfix oglasi, bugfix sobe (problem u launch sobama), promjena homepagea

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -186,21 +186,21 @@ body, html, .App, #root {
 }
 
 
-.Card p {
+.Card h3 {
     margin: auto;
-    text-align: match-parent;
+    text-align: left;
 }
 
 .Card {
     display: inline-block;
-    width: 300px;
+    min-width: 300px;
+    width: 30%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
+    border-radius: 15px; /* 5px rounded corners */
     background: white;
-    margin: 20px;
-    text-align: center;
-    padding: 10px;
+    margin: 15px;
+    padding: 15px;
     color: black;
 }
 
